--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   /* margin-left: 10px; */
-  width: 100%;
+  /* width: 100%; */
   /* margin-right: 10px; */
   overflow:visible;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
