--- a/src/component/Services/Services.css
+++ b/src/component/Services/Services.css
@@ -2,67 +2,79 @@
     background-color:rgba(255, 0, 0, 0.089);
     border-top: 50px solid red;
     padding: 30px 0px;
+    text-align: center;
 }
 
 .service_area article, h2{
-    text-align: center;
+ 
+    font-weight:bold;
+    color: rgb(5, 5, 65);
+    text-transform: uppercase !important;
+    font-family: "Roboto Slab" !important;
 
 }
 .service_area h2{
-    text-align: center;
     letter-spacing: 2px;
     font-size: 34px;
-    text-transform: uppercase !important;
-    font-weight:bold;
-    color: rgb(5, 5, 65);
-    font-family: "Roboto Slab" !important;
     border-bottom: 10px solid red;
     border-width: 1px;
     padding-bottom: 15px;
 }
 .service_area article{
     font-style: italic;
-    text-align: center;
     letter-spacing: 2px;
     font-size: 12px;
-    text-transform: uppercase !important;
-    font-weight:bold;
-    color: rgb(5, 5, 65);
-    font-family: "Roboto Slab" !important;
     padding: 20px 0px;
 }
 .services_section{
-    padding: 50px 0;
+    transition: all .25s;
+    box-shadow: 0px 3px 20px 5px rgba(212, 120, 120, 0.4);
+    justify-content: space-evenly;
+    display: flex;
+    background-color: #c8c9ca85 !important;
+}
+.services_section:hover{
+    transform:translateY(-5px);
+    box-shadow: 0px 3px 8px 0px rgba(252, 17, 17, 0.9);
+}
+
+.services_section .card_image{
+    height: 200px;
+}
+.services_section .card_image img{
+    height: 100%;
+    border-radius: 2%;
+}
+
+@media (min-width: 450px) {
+    .services_section .card_image img{
+        height: 100%;
+        width: 80%;
+    }
 }
 
 .services_section strong{
-    font-size: 34px !important;
-}
-.services_section .card{
-    background-color: lightgray;
-    border-radius: 2%;
-    box-shadow: rgba(0, 0, 0, 0.14) 0px 4px 20px 0px, rgba(233, 30, 99, 0.4) 0px 7px 10px -5px
-    ;
-}
-.services_section .card:hover{
-    color:  rgb(5, 5, 65);
-    box-shadow: 2px 2px 20px red;
+    font-size: 24px !important;
 }
 
-.CardButton Button{
+.services_section .btn{
     background-color: rgb(255, 0, 0);
     border-color: red;
     margin-left: 20px;
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.5);
 }
-.CardButton Button:hover{
+.services_section .btn:hover{
     background-color: rgba(255, 0, 0, 0.007);
     border-color: red;
-    color: rgb(5, 5, 65);
+    color: red;
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.3);
 }
+
 .spiner{
     font-size: 30px;
     margin-top: 30%;
     margin-left: 50%;
     padding: 10px;
     font-style: italic;
+    color: red;
 }
