--- a/src/component/Get_In_Touch/GetInTouch.css
+++ b/src/component/Get_In_Touch/GetInTouch.css
@@ -17,6 +17,23 @@
     font-weight: 700;
     margin-top: 25px;
 }
-.get_InTouch .CardButton Button:hover{
-    color: white !important;
+.get_InTouch input{
+    padding: 10px;
+    width: 250px;
+    border-radius: 10px;
+    background-color: #f7f7f7;
+    border: 1.5px solid red;
+    color: red !important;
+}
+.get_InTouch .btn{
+    background-color: rgb(255, 0, 0);
+    border-color: red;
+    margin-left: 20px;
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.5);
+}
+.get_InTouch .btn:hover{
+    background-color: white;
+    border-color: white;
+    color: red;
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.3);
 }
