--- a/src/component/Review/Review.css
+++ b/src/component/Review/Review.css
@@ -30,14 +30,16 @@
 .Review_section{
     text-align: center;
     height: 400px;
+    
 }
 .Review_section .card{
-    background-color: lightgray;
+    background-color: rgba(211, 211, 211, 0.452);
     text-align: center;
     height: 400px;
     border-radius: 30px;
     box-shadow: 0px 10px  red !important;
     padding-top: 10px;
+    
     
 }
 .Review_section .card:hover{
@@ -45,11 +47,14 @@
     transform:translateY(20px);
     transition:all 500ms;
     
+    
 }
 .Review_section img{
-    width: 200px;
+    height: 150px;
+    width: 150px;
     border-radius: 50%;
     padding-left:10%;
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
     
 }
 .card h2, h3{
