--- a/src/component/Services/Services.css
+++ b/src/component/Services/Services.css
@@ -1,7 +1,6 @@
 .service_area{
-    background-color:rgba(255, 0, 0, 0.089);
-    border-top: 50px solid red;
-    padding: 30px 0px;
+    background-color: #f7f7f7;;
+    padding: 50px 0px;
     text-align: center;
 }
 
@@ -18,13 +17,15 @@
     font-size: 34px;
     border-bottom: 10px solid red;
     border-width: 1px;
-    padding-bottom: 15px;
+    margin-bottom: 30px;
+    padding-bottom: 50px;
 }
 .service_area article{
     font-style: italic;
     letter-spacing: 2px;
     font-size: 12px;
-    padding: 20px 0px;
+    margin-top: 50px;
+    padding: 30px 0px;
 }
 .services_section{
     transition: all .25s;
@@ -55,6 +56,7 @@
 
 .services_section strong{
     font-size: 24px !important;
+    color: red;
 }
 
 .services_section .btn{
