--- a/src/component/Featured/Featured.css
+++ b/src/component/Featured/Featured.css
@@ -19,7 +19,7 @@
 }
 .featuredInfo{
     justify-content: space-evenly;
-    align-items: center;
+    /* align-items: center; */
     
 }
 .featuredInfo img{
