--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,10 @@
-body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* margin-left: 10px; */
-  /* width: 100%; */
-  /* margin-right: 10px; */
-  overflow:visible;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Roboto Slab', 'serif', 'Cantarell', 'Mulish', 'sans-serif', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Roboto', "Roboto Slab";
 }
+body {
+  overflow:visible;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
