--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,41 @@
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', "Roboto Slab";
+
 }
+html{overflow-x: hidden;}
 body {
   overflow:visible;
+  font-family: 'Roboto', 'Roboto Slab', serif;
+}
 
+::selection {
+  background-color: red;
+  color: white;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  scroll-behavior: smooth;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: red; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
+
+
+
+::marker { 
+  color: #14a800;
+  /* font-size: 23px; */
+  /* margin-left: 20px; */
 }
